--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ body{
     right: -130px;
 }
 
+.metodos{
+    margin: 10px;     
+    height: 100%;
+}
+
 .main .metodos{
     display: flex;
     align-items:center;
@@ -137,9 +142,23 @@ body{
     align-items: center;
     background: #fff;
     justify-content: center; 
+    max-height: 90%;
 }
 
+.nameMetodo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 
+p{
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    color: rebeccapurple;  
+}
 .main .content .img{
     height: 120px;
     width: 140px;
@@ -177,7 +196,13 @@ body{
     color: #fff;
     background: linear-gradient(to bottom,#bea2e7 0%, #86b7e7 100%);
     transition: all 0.3s ease;
+    /* width: 30vw; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+
 /* .content a:hover{
     transform: scale(0.94);
 } */
