Agregado un audio(fer)

--- a/css/main.css
+++ b/css/main.css
@@ -97,3 +97,7 @@ a{
 .container-principal .container-main .fondo-song-mato{
     background-color: #a9413f;
 }
+
+.container-principal .container-main .fondo-song-curso{
+    background-color: #b1aeae;
+}
