--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,9 @@ a{
 
 .container-principal {
     background-image: url("../src/img/fondo.jpg");
+    background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-repeat: no-repeat; /* no se repita si es grande */
     background-size: cover;
     padding: 30px 0 0 0;
@@ -21,6 +22,8 @@ a{
 /* Parte del header(Cabecera) */
 
 .container-nav {
+    position: sticky;
+    top: 0px;
     display: flex;
     width: 70%;
     min-height: 100px;
@@ -29,9 +32,9 @@ a{
     align-items: center;
     padding: 10px;
     /* Diseño del nav color y forma*/
-    background-color: aliceblue;
+    background-color: rgb(190, 225, 255);
     border-radius: 20px;
-    opacity: 0.8;
+    /* opacity: 0.8; */
 }
 
 @media (max-width:700px){
@@ -68,10 +71,12 @@ a{
     width: 70%;
     margin: 0 auto;
     padding: 50px 10px 10px 10px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
     gap: 30px;
 }
+
 .container-main div {
     width: 150px;
     height: 150px;
@@ -90,14 +95,22 @@ a{
     font-weight: bold;
 }
 
-.container-principal .container-main .fondo-song-queimporta{
+.container-principal .container-main .fondo-song-jose{
     background-color: #f96260;
 }
 
-.container-principal .container-main .fondo-song-mato{
+.container-principal .container-main .fondo-song-carlitos{
     background-color: #a9413f;
 }
 
-.container-principal .container-main .fondo-song-curso{
+.container-principal .container-main .fondo-song-fer{
     background-color: #b1aeae;
+}
+
+.container-principal .container-main .fondo-song-josue{
+    background-color: #234872;
+}
+
+.container-principal .container-main .fondo-song-leo{
+    background-color: #240404;
 }
